--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,4 @@
 # These owners will be the default owners for everything in the repo.
-# Unless a later match takes precedence, @usernam will be
+# Unless a later match takes precedence, @craigsloggett will be
 # requested for review when someone opens a pull request.
-#*       @username
+*       @craigsloggett
